# m2-minicon

m2_mini_contest/turtle_ps4/src/: ps4_controller.py
m2_ps4-master/: CMakeLists.txt  package.xml  setup.py
m2_ps4-master/config/: ds4-mouse-off.sh  gen_rules.py
m2_ps4-master/launch/: mux.launch
m2_ps4-master/msg/: ChannelProvider.msg  Ps4Motion.msg
m2_ps4-master/src/: battery.py  channel_keepalive.py  led.py  manual_io.py  manual_node.py  manual_pos.py  motion.py  tpad.py  transform_data.py  websim.py
src/m2_mini_contest/turtle_ps4/launch/: test.launch
src/m2_mini_contest/turtle_ps4/src/: ps4_controller (copy).py  ps4_controller.py
src/m2_ps4-master/: README.md  connect.py  requirements.txt
src/m2_ps4-master/config/: ds4-data.yml
src/m2_ps4-master/launch/: ps4_msg.launch
src/m2_ps4-master/src/: ds4cond.py  manual_trigger.py  option_mux.py  pci.py  rumble.py
src/m2_ps4-master/srv/: SetRgb.srv
